// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ApplicationError > should render with error message and reload 1`] = `
<DocumentFragment>
  <main
    class="light"
    data-testid="Main"
  >
    <div
      class="css-kmmje1"
    >
      <nav
        aria-labelledby="main menu"
        class="css-1pyu5ft"
      >
        <div
          class="relative flex h-21"
        >
          <div
            class="flex flex-1 px-6 md:px-10"
          >
            <div
              class="my-auto flex items-center"
            >
              <button
                class="my-auto mr-2 flex h-8 w-8 cursor-pointer items-center justify-center rounded bg-theme-primary-600 text-white outline-none focus:outline-none focus:ring-2 focus:ring-theme-primary-400 sm:mr-4 sm:h-11 sm:w-11 sm:rounded-xl"
                data-testid="NavigationBarLogo--button"
                type="button"
              >
                <span
                  class="relative"
                >
                  <svg
                    fill="none"
                    height="28"
                    viewBox="0 0 363 363"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <g
                      clip-path="url(#clip0_434_4442)"
                    >
                      <path
                        d="M174.182 352.325a279.256 279.256 0 0 1-25.627-20.536c-8.518-7.525-17.006-15.66-25.229-24.178a470.15 470.15 0 0 1-29.234-33.315 449.417 449.417 0 0 1-57.68-93.623 420.933 420.933 0 0 1-22.044-60.102A416.702 416.702 0 0 1 1.126 51.749c-.512-4.803-.303-10.73 5.9-13.842a393.077 393.077 0 0 1 54.42-19.94 459.697 459.697 0 0 1 52.646-12.195A374.409 374.409 0 0 1 176.15.333h11.6a374.406 374.406 0 0 1 62.057 5.44 459.723 459.723 0 0 1 52.646 12.195 393.328 393.328 0 0 1 54.422 19.939c6.203 3.115 6.41 9.034 5.898 13.842a416.672 416.672 0 0 1-13.242 68.822 421.133 421.133 0 0 1-22.044 60.102 449.395 449.395 0 0 1-57.68 93.623 470 470 0 0 1-29.234 33.315c-8.223 8.518-16.711 16.653-25.229 24.178a279.73 279.73 0 0 1-25.627 20.536 17.811 17.811 0 0 1-15.528 0h-.007zm6.769-230.087c-.412.547-28.363 29.571-48.772 50.764-7.035 7.318-13.229 13.736-17.187 17.853a49.345 49.345 0 0 0-14.37 29.355 42.981 42.981 0 0 0 2.034 17.531 59.295 59.295 0 0 0 10.41 18.547 369.34 369.34 0 0 0 42.811 44.915 223.324 223.324 0 0 0 20.072 16.051 13.364 13.364 0 0 0 12.005 0 223.333 223.333 0 0 0 20.07-16.051 369.191 369.191 0 0 0 42.811-44.915 59.297 59.297 0 0 0 10.411-18.547 42.98 42.98 0 0 0 2.033-17.531 49.34 49.34 0 0 0-14.377-29.358l-14.811-15.385-1.779-1.848c-20.66-21.451-48.955-50.832-49.371-51.383a1.179 1.179 0 0 0-.995-.548 1.184 1.184 0 0 0-.995.548v.002zm1.408-69.483c.136.215.321.505.582.869.391.544 6.257 9.93 14.382 22.92 19.488 31.162 52.102 83.315 60.679 96.014 6.342 9.377 14.353 14.77 21.974 14.772 7.402 0 18.108-5.031 27.079-29.067a332.382 332.382 0 0 0 19.124-81.095c.409-3.84.243-8.568-4.713-11.056a314.32 314.32 0 0 0-43.468-15.926 367.237 367.237 0 0 0-42.052-9.743 299.13 299.13 0 0 0-49.568-4.345h-8.871a299.13 299.13 0 0 0-49.568 4.345 367.225 367.225 0 0 0-42.051 9.743 314.427 314.427 0 0 0-43.469 15.926c-4.951 2.486-5.12 7.213-4.712 11.056a332.313 332.313 0 0 0 19.124 81.095c4.952 13.265 13.67 29.067 27.078 29.067 7.624 0 15.63-5.384 21.974-14.772 8.57-12.687 41.169-64.811 60.643-95.955l.032-.053c8.124-12.993 13.995-22.38 14.384-22.921.259-.364.455-.657.58-.87.209-.327.311-.491.416-.491.105 0 .214.16.421.487zm-55.455 149.533l19.652-20.614h69.159l19.649 20.614h-108.46zm34.197-35.377l20.162-20.871 20.159 20.871h-40.321z"
                        fill="currentColor"
                      />
                    </g>
                  </svg>
                </span>
              </button>
              <span
                class="text-lg uppercase"
              >
                <strong>
                  ARK
                </strong>
                Vault
              </span>
            </div>
          </div>
        </div>
      </nav>
      <div
        class="flex flex-1 flex-col"
      >
        <div
          class="w-full py-4 first:pt-8 last:pb-8 flex flex-1 flex-col justify-center text-center css-9mualq"
        >
          <div
            class="mx-auto px-6 lg:container md:px-10"
          >
            <div
              class="mx-auto flex w-full max-w-xs justify-center"
            >
              <svg
                viewBox="0 0 342 271.163"
                xmlns="http://www.w3.org/2000/svg"
              >
                <g
                  id="images"
                  transform="translate(-538 -150.837)"
                >
                  <path
                    d="M690 277v-10.818s-1.592-7.852-8.156-8.055-29.03 0-29.03 0 1.442 2.592 1.427 3.963 0 14.91 0 14.91z"
                    data-name="\\u041A\\u043E\\u043D\\u0442\\u0443\\u0440 280"
                    fill="#eef3f5"
                    id="\\u041A\\u043E\\u043D\\u0442\\u0443\\u0440_280"
                  />
                  <path
                    d="M793.467 374.061h22.694s.228-6.166-1.243-8.012-3.771-5.35-5.328-5.465a26.679 26.679 0 0 1-5.158-1.59h-2.355v-41.273s-3.68 7.1-8.879 9.367a25.528 25.528 0 0 1-10.1 2.066s.512 9.477-.81 12.8a123.732 123.732 0 0 1-6.216 12.328c-.843 1.248-.613 1.844 1.326 1.883a20.1 20.1 0 0 1 8.959 2.564c2.934 1.822 6.744 4.963 7.108 8.363s.77 4.033.72 4.543a21.419 21.419 0 0 1-.718 2.426z"
                    data-name="\\u041A\\u043E\\u043D\\u0442\\u0443\\u0440 306"
                    fill="#dbdee5"
                    id="\\u041A\\u043E\\u043D\\u0442\\u0443\\u0440_306"
                  />
                  <path
                    d="M802.246 236.119s-.7-10.559 2.294-14.48 11.878-14.135 12.492-19.562 1.9-11.973 0-14.654-5.534-2.15-6.438-2.014 3.21 8.9-3.618 18.715-18.238 15-19.254 15.463-3.163 1.664 0 2.564 8.58 4.707 10.362 7.707 4.162 6.261 4.162 6.261z"
                    data-name="\\u041A\\u043E\\u043D\\u0442\\u0443\\u0440 304"
                    fill="#dbdee5"
                    id="\\u041A\\u043E\\u043D\\u0442\\u0443\\u0440_304"
                  />
                  <path
                    d="M602 422v-20h-38v10h-2v-10h-24v-2h24v-38h-24v-2h24v-18h2v18h3v2h-3v38h38v-18h2v18h23v2h-23v20zm39-16v-4h-4v-2h4v-4h2v4h4v2h-4v4zm211-13v-19h-87v19h-2v-19h-5v-2h5v-39h2v39h87v-39h-4v-2h4v-38h-4v-2h4v-23h2v23h6v2h-6v38h26v2h-26v39h26v2h-26v19zm-19-56v-4h-4v-2h4v-4h2v4h4v2h-4v4zm-271-1v-4h-4v-2h4v-4h2v4h4v2h-4v4zm290-78v-4h-4v-2h4v-4h2v4h4v2h-4v4z"
                    data-name="\\u041F\\u0440\\u044F\\u043C\\u043E\\u0443\\u0433\\u043E\\u043B\\u044C\\u043D\\u0438\\u043A 1 \\u043A\\u043E\\u043F\\u0438\\u044F 12"
                    fill="#dbdee5"
                    id="\\u041F\\u0440\\u044F\\u043C\\u043E\\u0443\\u0433\\u043E\\u043B\\u044C\\u043D\\u0438\\u043A_1_\\u043A\\u043E\\u043F\\u0438\\u044F_12"
                  />
                  <path
                    d="M739.294 374.092H629.842"
                    data-name="\\u041A\\u043E\\u043D\\u0442\\u0443\\u0440 303"
                    fill="none"
                    id="\\u041A\\u043E\\u043D\\u0442\\u0443\\u0440_303"
                    stroke="#dbdee5"
                    stroke-linecap="round"
                    stroke-width="2"
                  />
                  <path
                    d="M817.321 189.379c-.837 2.605-4.231-1.129-4.171-3.547s5.008.941 4.171 3.547z"
                    data-name="\\u041A\\u043E\\u043D\\u0442\\u0443\\u0440 301"
                    fill="#289548"
                    id="\\u041A\\u043E\\u043D\\u0442\\u0443\\u0440_301"
                  />
                  <g
                    data-name="\\u0413\\u0440\\u0443\\u043F\\u043F\\u0430 3"
                    fill="none"
                    id="\\u0413\\u0440\\u0443\\u043F\\u043F\\u0430_3"
                    stroke="#212225"
                    stroke-linecap="round"
                    stroke-width="2"
                  >
                    <path
                      d="M700 276c14.291-19.543 41-36.6 41-69s12.474-37.739 19-41c1.433-.716 5.45-10.043 6-12s3.566-3.662 6 0c2.178 3.277 5 8 5 8s24.327.031 33 23c.4 1.049 4.644-.141 6 1s6.216 15.259-7 30c-3.174 3.541-7 6.3-7 22v121s14-.269 14 13v1h-16"
                      data-name="\\u0424\\u0438\\u0433\\u0443\\u0440\\u0430 1142"
                      id="\\u0424\\u0438\\u0433\\u0443\\u0440\\u0430_1142"
                    />
                    <path
                      d="M764.243 297.432A44.144 44.144 0 0 1 783 334c0 8.994-3.341 14.763-7.887 21.793"
                      data-name="\\u042D\\u043B\\u043B\\u0438\\u043F\\u0441 3695"
                      id="\\u042D\\u043B\\u043B\\u0438\\u043F\\u0441_3695"
                    />
                    <path
                      d="M775 356c6.706 0 17.2 2.292 19 14a16.582 16.582 0 0 1 0 3l-27.975.092"
                      data-name="\\u0424\\u0438\\u0433\\u0443\\u0440\\u0430 1143"
                      id="\\u0424\\u0438\\u0433\\u0443\\u0440\\u0430_1143"
                    />
                    <path
                      d="M810.114 185.234S818.44 209.781 779 223"
                      data-name="\\u0424\\u0438\\u0433\\u0443\\u0440\\u0430 1144"
                      id="\\u0424\\u0438\\u0433\\u0443\\u0440\\u0430_1144"
                    />
                    <path
                      d="M758.895 166.713S764.456 165.3 767 163"
                      data-name="\\u0424\\u0438\\u0433\\u0443\\u0440\\u0430 1145"
                      id="\\u0424\\u0438\\u0433\\u0443\\u0440\\u0430_1145"
                    />
                    <path
                      d="M802 246s-5.014-12-17-15"
                      data-name="\\u0424\\u0438\\u0433\\u0443\\u0440\\u0430 1146"
                      id="\\u0424\\u0438\\u0433\\u0443\\u0440\\u0430_1146"
                      transform="translate(0 -10)"
                    />
                    <path
                      d="M746.637 276.822c-2.705-3.929-4.687-11.811-2.637-17.822"
                      data-name="\\u0424\\u0438\\u0433\\u0443\\u0440\\u0430 1148"
                      id="\\u0424\\u0438\\u0433\\u0443\\u0440\\u0430_1148"
                    />
                    <path
                      d="M798.89 182.4s-2.6-2.2-8.058 0"
                      data-name="\\u041A\\u043E\\u043D\\u0442\\u0443\\u0440 302"
                      id="\\u041A\\u043E\\u043D\\u0442\\u0443\\u0440_302"
                    />
                    <path
                      d="M783 329.428s15.492-.463 19-13.09"
                      data-name="\\u041A\\u043E\\u043D\\u0442\\u0443\\u0440 305"
                      id="\\u041A\\u043E\\u043D\\u0442\\u0443\\u0440_305"
                    />
                  </g>
                  <path
                    d="M654 277h100a10 10 0 0 1 10 10v77"
                    data-name="\\u041F\\u0440\\u044F\\u043C\\u043E\\u0443\\u0433\\u043E\\u043B\\u044C\\u043D\\u0438\\u043A, \\u0441\\u043A\\u0440\\u0443\\u0433\\u043B. \\u0443\\u0433\\u043B\\u044B 970"
                    fill="none"
                    id="\\u041F\\u0440\\u044F\\u043C\\u043E\\u0443\\u0433\\u043E\\u043B\\u044C\\u043D\\u0438\\u043A_\\u0441\\u043A\\u0440\\u0443\\u0433\\u043B._\\u0443\\u0433\\u043B\\u044B_970"
                    stroke="#dbdee5"
                    stroke-width="2"
                  />
                  <path
                    d="M597 278v-16a10 10 0 0 1 10-10h37a10 10 0 0 1 10 10v16"
                    data-name="\\u041F\\u0440\\u044F\\u043C\\u043E\\u0443\\u0433\\u043E\\u043B\\u044C\\u043D\\u0438\\u043A, \\u0441\\u043A\\u0440\\u0443\\u0433\\u043B. \\u0443\\u0433\\u043B\\u044B 970 \\u043A\\u043E\\u043F\\u0438\\u044F"
                    fill="none"
                    id="\\u041F\\u0440\\u044F\\u043C\\u043E\\u0443\\u0433\\u043E\\u043B\\u044C\\u043D\\u0438\\u043A_\\u0441\\u043A\\u0440\\u0443\\u0433\\u043B._\\u0443\\u0433\\u043B\\u044B_970_\\u043A\\u043E\\u043F\\u0438\\u044F"
                    stroke="#dbdee5"
                    stroke-width="2"
                  />
                  <path
                    d="M653 258h27a10 10 0 0 1 10 10v10"
                    data-name="\\u041F\\u0440\\u044F\\u043C\\u043E\\u0443\\u0433\\u043E\\u043B\\u044C\\u043D\\u0438\\u043A, \\u0441\\u043A\\u0440\\u0443\\u0433\\u043B. \\u0443\\u0433\\u043B\\u044B 970 \\u043A\\u043E\\u043F\\u0438\\u044F 2"
                    fill="none"
                    id="\\u041F\\u0440\\u044F\\u043C\\u043E\\u0443\\u0433\\u043E\\u043B\\u044C\\u043D\\u0438\\u043A_\\u0441\\u043A\\u0440\\u0443\\u0433\\u043B._\\u0443\\u0433\\u043B\\u044B_970_\\u043A\\u043E\\u043F\\u0438\\u044F_2"
                    stroke="#dbdee5"
                    stroke-width="2"
                  />
                  <path
                    d="M654 277h100a10 10 0 0 1 10 10v26m-167 51v-86"
                    data-name="\\u041F\\u0440\\u044F\\u043C\\u043E\\u0443\\u0433\\u043E\\u043B\\u044C\\u043D\\u0438\\u043A, \\u0441\\u043A\\u0440\\u0443\\u0433\\u043B. \\u0443\\u0433\\u043B\\u044B 970 \\u043A\\u043E\\u043F\\u0438\\u044F 3"
                    fill="none"
                    id="\\u041F\\u0440\\u044F\\u043C\\u043E\\u0443\\u0433\\u043E\\u043B\\u044C\\u043D\\u0438\\u043A_\\u0441\\u043A\\u0440\\u0443\\u0433\\u043B._\\u0443\\u0433\\u043B\\u044B_970_\\u043A\\u043E\\u043F\\u0438\\u044F_3"
                    stroke="#dbdee5"
                    stroke-linecap="round"
                    stroke-width="2"
                  />
                  <g
                    data-name="\\u041F\\u0440\\u044F\\u043C\\u043E\\u0443\\u0433\\u043E\\u043B\\u044C\\u043D\\u0438\\u043A 1 \\u043A\\u043E\\u043F\\u0438\\u044F 6"
                    fill="none"
                    id="\\u041F\\u0440\\u044F\\u043C\\u043E\\u0443\\u0433\\u043E\\u043B\\u044C\\u043D\\u0438\\u043A_1_\\u043A\\u043E\\u043F\\u0438\\u044F_6"
                    stroke="none"
                  >
                    <path
                      d="M712 322v-4h4v4zm-8 0v-4h4v4zm-48 0v-4h4v4zm-8 0v-4h4v4zm60-4v-4h4v4zm-56 0v-4h4v4zm60-4v-4h4v4zm-8 0v-4h4v4zm-48 0v-4h4v4zm-8 0v-4h4v4z"
                    />
                    <path
                      d="M716 322h-4v-4h4v4zm-8 0h-4v-4h4v4zm-48 0h-4v-4h4v4zm-8 0h-4v-4h4v4zm60-4h-4v-4h4v4zm-56 0h-4v-4h4v4zm60-4h-4v-4h4v4zm-8 0h-4v-4h4v4zm-48 0h-4v-4h4v4zm-8 0h-4v-4h4v4z"
                      fill="#212225"
                    />
                  </g>
                  <path
                    d="M671 341h24"
                    data-name="\\u0424\\u0438\\u0433\\u0443\\u0440\\u0430 1"
                    fill="none"
                    id="\\u0424\\u0438\\u0433\\u0443\\u0440\\u0430_1"
                    stroke="#212225"
                    stroke-width="2"
                  />
                  <path
                    d="M613.617 357H646.5a8.5 8.5 0 0 1 0 17h-53a8.5 8.5 0 0 1 0-17h2.587"
                    data-name="\\u041F\\u0440\\u044F\\u043C\\u043E\\u0443\\u0433\\u043E\\u043B\\u044C\\u043D\\u0438\\u043A, \\u0441\\u043A\\u0440\\u0443\\u0433\\u043B. \\u0443\\u0433\\u043B\\u044B 971"
                    fill="none"
                    id="\\u041F\\u0440\\u044F\\u043C\\u043E\\u0443\\u0433\\u043E\\u043B\\u044C\\u043D\\u0438\\u043A_\\u0441\\u043A\\u0440\\u0443\\u0433\\u043B._\\u0443\\u0433\\u043B\\u044B_971"
                    stroke="#212225"
                    stroke-width="2"
                  />
                </g>
              </svg>
            </div>
            <div
              class="mt-8"
              data-testid="ApplicationError__text"
            >
              <h2
                class="text-2xl font-bold capitalize"
              >
                Something went wrong
              </h2>
              <p
                class="text-theme-secondary-text"
              >
                It looks like something went wrong. Try visiting another page or reloading.
              </p>
              <p
                class="text-theme-secondary-text"
              >
                Please provide the error below when contacting support.
              </p>
            </div>
            <div
              class="mx-auto mt-8 max-w-md"
            >
              <div
                class="relative"
              >
                <div
                  class="pointer-events-none absolute bottom-4 right-3 z-10 hidden h-0 w-0 -rotate-45 border-x-8 border-t-8 border-x-transparent border-t-theme-secondary-400 dark:border-t-theme-secondary-700 md:block"
                />
                <div
                  class="py-4 css-1prn1rr"
                  disabled=""
                >
                  <div
                    class="relative flex h-full flex-1"
                  >
                    <textarea
                      autocomplete="off"
                      class="no-ligatures w-full border-none resize-none min-h-[8rem] md:min-h-auto md:resize-y resize-none text-theme-secondary-text css-1vs1awz"
                      data-testid="ErrorStep__errorMessage"
                      disabled=""
                      type="text"
                    >
                      some error
                    </textarea>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="mx-auto mt-8 flex max-w-md items-center justify-center space-x-4"
            >
              <div
                class="relative"
              >
                <button
                  class="css-9z53t5"
                  data-testid="clipboard-button__wrapper"
                  type="button"
                >
                  <div
                    class="flex items-center space-x-2"
                  >
                    Copy
                  </div>
                </button>
              </div>
              <button
                class="px-5 py-3 space-x-3 text-base relative items-center inline-flex justify-center font-semibold leading-tight text-center transition-colors-shadow duration-100 ease-linear outline-none focus:outline-none focus:ring-2 focus:ring-theme-primary-400 disabled:cursor-not-allowed rounded text-white bg-theme-primary-600 hover:bg-theme-primary-700"
                data-testid="ApplicationError__button--reload"
                type="button"
              >
                <div
                  class="flex items-center space-x-2"
                >
                  Reload
                </div>
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
  </main>
</DocumentFragment>
`;

exports[`ApplicationError > should render without error message 1`] = `
<DocumentFragment>
  <main
    class="light"
    data-testid="Main"
  >
    <div
      class="css-kmmje1"
    >
      <nav
        aria-labelledby="main menu"
        class="css-1pyu5ft"
      >
        <div
          class="relative flex h-21"
        >
          <div
            class="flex flex-1 px-6 md:px-10"
          >
            <div
              class="my-auto flex items-center"
            >
              <button
                class="my-auto mr-2 flex h-8 w-8 cursor-pointer items-center justify-center rounded bg-theme-primary-600 text-white outline-none focus:outline-none focus:ring-2 focus:ring-theme-primary-400 sm:mr-4 sm:h-11 sm:w-11 sm:rounded-xl"
                data-testid="NavigationBarLogo--button"
                type="button"
              >
                <span
                  class="relative"
                >
                  <svg
                    fill="none"
                    height="28"
                    viewBox="0 0 363 363"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <g
                      clip-path="url(#clip0_434_4442)"
                    >
                      <path
                        d="M174.182 352.325a279.256 279.256 0 0 1-25.627-20.536c-8.518-7.525-17.006-15.66-25.229-24.178a470.15 470.15 0 0 1-29.234-33.315 449.417 449.417 0 0 1-57.68-93.623 420.933 420.933 0 0 1-22.044-60.102A416.702 416.702 0 0 1 1.126 51.749c-.512-4.803-.303-10.73 5.9-13.842a393.077 393.077 0 0 1 54.42-19.94 459.697 459.697 0 0 1 52.646-12.195A374.409 374.409 0 0 1 176.15.333h11.6a374.406 374.406 0 0 1 62.057 5.44 459.723 459.723 0 0 1 52.646 12.195 393.328 393.328 0 0 1 54.422 19.939c6.203 3.115 6.41 9.034 5.898 13.842a416.672 416.672 0 0 1-13.242 68.822 421.133 421.133 0 0 1-22.044 60.102 449.395 449.395 0 0 1-57.68 93.623 470 470 0 0 1-29.234 33.315c-8.223 8.518-16.711 16.653-25.229 24.178a279.73 279.73 0 0 1-25.627 20.536 17.811 17.811 0 0 1-15.528 0h-.007zm6.769-230.087c-.412.547-28.363 29.571-48.772 50.764-7.035 7.318-13.229 13.736-17.187 17.853a49.345 49.345 0 0 0-14.37 29.355 42.981 42.981 0 0 0 2.034 17.531 59.295 59.295 0 0 0 10.41 18.547 369.34 369.34 0 0 0 42.811 44.915 223.324 223.324 0 0 0 20.072 16.051 13.364 13.364 0 0 0 12.005 0 223.333 223.333 0 0 0 20.07-16.051 369.191 369.191 0 0 0 42.811-44.915 59.297 59.297 0 0 0 10.411-18.547 42.98 42.98 0 0 0 2.033-17.531 49.34 49.34 0 0 0-14.377-29.358l-14.811-15.385-1.779-1.848c-20.66-21.451-48.955-50.832-49.371-51.383a1.179 1.179 0 0 0-.995-.548 1.184 1.184 0 0 0-.995.548v.002zm1.408-69.483c.136.215.321.505.582.869.391.544 6.257 9.93 14.382 22.92 19.488 31.162 52.102 83.315 60.679 96.014 6.342 9.377 14.353 14.77 21.974 14.772 7.402 0 18.108-5.031 27.079-29.067a332.382 332.382 0 0 0 19.124-81.095c.409-3.84.243-8.568-4.713-11.056a314.32 314.32 0 0 0-43.468-15.926 367.237 367.237 0 0 0-42.052-9.743 299.13 299.13 0 0 0-49.568-4.345h-8.871a299.13 299.13 0 0 0-49.568 4.345 367.225 367.225 0 0 0-42.051 9.743 314.427 314.427 0 0 0-43.469 15.926c-4.951 2.486-5.12 7.213-4.712 11.056a332.313 332.313 0 0 0 19.124 81.095c4.952 13.265 13.67 29.067 27.078 29.067 7.624 0 15.63-5.384 21.974-14.772 8.57-12.687 41.169-64.811 60.643-95.955l.032-.053c8.124-12.993 13.995-22.38 14.384-22.921.259-.364.455-.657.58-.87.209-.327.311-.491.416-.491.105 0 .214.16.421.487zm-55.455 149.533l19.652-20.614h69.159l19.649 20.614h-108.46zm34.197-35.377l20.162-20.871 20.159 20.871h-40.321z"
                        fill="currentColor"
                      />
                    </g>
                  </svg>
                </span>
              </button>
              <span
                class="text-lg uppercase"
              >
                <strong>
                  ARK
                </strong>
                Vault
              </span>
            </div>
          </div>
        </div>
      </nav>
      <div
        class="flex flex-1 flex-col"
      >
        <div
          class="w-full py-4 first:pt-8 last:pb-8 flex flex-1 flex-col justify-center text-center css-9mualq"
        >
          <div
            class="mx-auto px-6 lg:container md:px-10"
          >
            <div
              class="mx-auto flex w-full max-w-xs justify-center"
            >
              <svg
                viewBox="0 0 342 271.163"
                xmlns="http://www.w3.org/2000/svg"
              >
                <g
                  id="images"
                  transform="translate(-538 -150.837)"
                >
                  <path
                    d="M690 277v-10.818s-1.592-7.852-8.156-8.055-29.03 0-29.03 0 1.442 2.592 1.427 3.963 0 14.91 0 14.91z"
                    data-name="\\u041A\\u043E\\u043D\\u0442\\u0443\\u0440 280"
                    fill="#eef3f5"
                    id="\\u041A\\u043E\\u043D\\u0442\\u0443\\u0440_280"
                  />
                  <path
                    d="M793.467 374.061h22.694s.228-6.166-1.243-8.012-3.771-5.35-5.328-5.465a26.679 26.679 0 0 1-5.158-1.59h-2.355v-41.273s-3.68 7.1-8.879 9.367a25.528 25.528 0 0 1-10.1 2.066s.512 9.477-.81 12.8a123.732 123.732 0 0 1-6.216 12.328c-.843 1.248-.613 1.844 1.326 1.883a20.1 20.1 0 0 1 8.959 2.564c2.934 1.822 6.744 4.963 7.108 8.363s.77 4.033.72 4.543a21.419 21.419 0 0 1-.718 2.426z"
                    data-name="\\u041A\\u043E\\u043D\\u0442\\u0443\\u0440 306"
                    fill="#dbdee5"
                    id="\\u041A\\u043E\\u043D\\u0442\\u0443\\u0440_306"
                  />
                  <path
                    d="M802.246 236.119s-.7-10.559 2.294-14.48 11.878-14.135 12.492-19.562 1.9-11.973 0-14.654-5.534-2.15-6.438-2.014 3.21 8.9-3.618 18.715-18.238 15-19.254 15.463-3.163 1.664 0 2.564 8.58 4.707 10.362 7.707 4.162 6.261 4.162 6.261z"
                    data-name="\\u041A\\u043E\\u043D\\u0442\\u0443\\u0440 304"
                    fill="#dbdee5"
                    id="\\u041A\\u043E\\u043D\\u0442\\u0443\\u0440_304"
                  />
                  <path
                    d="M602 422v-20h-38v10h-2v-10h-24v-2h24v-38h-24v-2h24v-18h2v18h3v2h-3v38h38v-18h2v18h23v2h-23v20zm39-16v-4h-4v-2h4v-4h2v4h4v2h-4v4zm211-13v-19h-87v19h-2v-19h-5v-2h5v-39h2v39h87v-39h-4v-2h4v-38h-4v-2h4v-23h2v23h6v2h-6v38h26v2h-26v39h26v2h-26v19zm-19-56v-4h-4v-2h4v-4h2v4h4v2h-4v4zm-271-1v-4h-4v-2h4v-4h2v4h4v2h-4v4zm290-78v-4h-4v-2h4v-4h2v4h4v2h-4v4z"
                    data-name="\\u041F\\u0440\\u044F\\u043C\\u043E\\u0443\\u0433\\u043E\\u043B\\u044C\\u043D\\u0438\\u043A 1 \\u043A\\u043E\\u043F\\u0438\\u044F 12"
                    fill="#dbdee5"
                    id="\\u041F\\u0440\\u044F\\u043C\\u043E\\u0443\\u0433\\u043E\\u043B\\u044C\\u043D\\u0438\\u043A_1_\\u043A\\u043E\\u043F\\u0438\\u044F_12"
                  />
                  <path
                    d="M739.294 374.092H629.842"
                    data-name="\\u041A\\u043E\\u043D\\u0442\\u0443\\u0440 303"
                    fill="none"
                    id="\\u041A\\u043E\\u043D\\u0442\\u0443\\u0440_303"
                    stroke="#dbdee5"
                    stroke-linecap="round"
                    stroke-width="2"
                  />
                  <path
                    d="M817.321 189.379c-.837 2.605-4.231-1.129-4.171-3.547s5.008.941 4.171 3.547z"
                    data-name="\\u041A\\u043E\\u043D\\u0442\\u0443\\u0440 301"
                    fill="#289548"
                    id="\\u041A\\u043E\\u043D\\u0442\\u0443\\u0440_301"
                  />
                  <g
                    data-name="\\u0413\\u0440\\u0443\\u043F\\u043F\\u0430 3"
                    fill="none"
                    id="\\u0413\\u0440\\u0443\\u043F\\u043F\\u0430_3"
                    stroke="#212225"
                    stroke-linecap="round"
                    stroke-width="2"
                  >
                    <path
                      d="M700 276c14.291-19.543 41-36.6 41-69s12.474-37.739 19-41c1.433-.716 5.45-10.043 6-12s3.566-3.662 6 0c2.178 3.277 5 8 5 8s24.327.031 33 23c.4 1.049 4.644-.141 6 1s6.216 15.259-7 30c-3.174 3.541-7 6.3-7 22v121s14-.269 14 13v1h-16"
                      data-name="\\u0424\\u0438\\u0433\\u0443\\u0440\\u0430 1142"
                      id="\\u0424\\u0438\\u0433\\u0443\\u0440\\u0430_1142"
                    />
                    <path
                      d="M764.243 297.432A44.144 44.144 0 0 1 783 334c0 8.994-3.341 14.763-7.887 21.793"
                      data-name="\\u042D\\u043B\\u043B\\u0438\\u043F\\u0441 3695"
                      id="\\u042D\\u043B\\u043B\\u0438\\u043F\\u0441_3695"
                    />
                    <path
                      d="M775 356c6.706 0 17.2 2.292 19 14a16.582 16.582 0 0 1 0 3l-27.975.092"
                      data-name="\\u0424\\u0438\\u0433\\u0443\\u0440\\u0430 1143"
                      id="\\u0424\\u0438\\u0433\\u0443\\u0440\\u0430_1143"
                    />
                    <path
                      d="M810.114 185.234S818.44 209.781 779 223"
                      data-name="\\u0424\\u0438\\u0433\\u0443\\u0440\\u0430 1144"
                      id="\\u0424\\u0438\\u0433\\u0443\\u0440\\u0430_1144"
                    />
                    <path
                      d="M758.895 166.713S764.456 165.3 767 163"
                      data-name="\\u0424\\u0438\\u0433\\u0443\\u0440\\u0430 1145"
                      id="\\u0424\\u0438\\u0433\\u0443\\u0440\\u0430_1145"
                    />
                    <path
                      d="M802 246s-5.014-12-17-15"
                      data-name="\\u0424\\u0438\\u0433\\u0443\\u0440\\u0430 1146"
                      id="\\u0424\\u0438\\u0433\\u0443\\u0440\\u0430_1146"
                      transform="translate(0 -10)"
                    />
                    <path
                      d="M746.637 276.822c-2.705-3.929-4.687-11.811-2.637-17.822"
                      data-name="\\u0424\\u0438\\u0433\\u0443\\u0440\\u0430 1148"
                      id="\\u0424\\u0438\\u0433\\u0443\\u0440\\u0430_1148"
                    />
                    <path
                      d="M798.89 182.4s-2.6-2.2-8.058 0"
                      data-name="\\u041A\\u043E\\u043D\\u0442\\u0443\\u0440 302"
                      id="\\u041A\\u043E\\u043D\\u0442\\u0443\\u0440_302"
                    />
                    <path
                      d="M783 329.428s15.492-.463 19-13.09"
                      data-name="\\u041A\\u043E\\u043D\\u0442\\u0443\\u0440 305"
                      id="\\u041A\\u043E\\u043D\\u0442\\u0443\\u0440_305"
                    />
                  </g>
                  <path
                    d="M654 277h100a10 10 0 0 1 10 10v77"
                    data-name="\\u041F\\u0440\\u044F\\u043C\\u043E\\u0443\\u0433\\u043E\\u043B\\u044C\\u043D\\u0438\\u043A, \\u0441\\u043A\\u0440\\u0443\\u0433\\u043B. \\u0443\\u0433\\u043B\\u044B 970"
                    fill="none"
                    id="\\u041F\\u0440\\u044F\\u043C\\u043E\\u0443\\u0433\\u043E\\u043B\\u044C\\u043D\\u0438\\u043A_\\u0441\\u043A\\u0440\\u0443\\u0433\\u043B._\\u0443\\u0433\\u043B\\u044B_970"
                    stroke="#dbdee5"
                    stroke-width="2"
                  />
                  <path
                    d="M597 278v-16a10 10 0 0 1 10-10h37a10 10 0 0 1 10 10v16"
                    data-name="\\u041F\\u0440\\u044F\\u043C\\u043E\\u0443\\u0433\\u043E\\u043B\\u044C\\u043D\\u0438\\u043A, \\u0441\\u043A\\u0440\\u0443\\u0433\\u043B. \\u0443\\u0433\\u043B\\u044B 970 \\u043A\\u043E\\u043F\\u0438\\u044F"
                    fill="none"
                    id="\\u041F\\u0440\\u044F\\u043C\\u043E\\u0443\\u0433\\u043E\\u043B\\u044C\\u043D\\u0438\\u043A_\\u0441\\u043A\\u0440\\u0443\\u0433\\u043B._\\u0443\\u0433\\u043B\\u044B_970_\\u043A\\u043E\\u043F\\u0438\\u044F"
                    stroke="#dbdee5"
                    stroke-width="2"
                  />
                  <path
                    d="M653 258h27a10 10 0 0 1 10 10v10"
                    data-name="\\u041F\\u0440\\u044F\\u043C\\u043E\\u0443\\u0433\\u043E\\u043B\\u044C\\u043D\\u0438\\u043A, \\u0441\\u043A\\u0440\\u0443\\u0433\\u043B. \\u0443\\u0433\\u043B\\u044B 970 \\u043A\\u043E\\u043F\\u0438\\u044F 2"
                    fill="none"
                    id="\\u041F\\u0440\\u044F\\u043C\\u043E\\u0443\\u0433\\u043E\\u043B\\u044C\\u043D\\u0438\\u043A_\\u0441\\u043A\\u0440\\u0443\\u0433\\u043B._\\u0443\\u0433\\u043B\\u044B_970_\\u043A\\u043E\\u043F\\u0438\\u044F_2"
                    stroke="#dbdee5"
                    stroke-width="2"
                  />
                  <path
                    d="M654 277h100a10 10 0 0 1 10 10v26m-167 51v-86"
                    data-name="\\u041F\\u0440\\u044F\\u043C\\u043E\\u0443\\u0433\\u043E\\u043B\\u044C\\u043D\\u0438\\u043A, \\u0441\\u043A\\u0440\\u0443\\u0433\\u043B. \\u0443\\u0433\\u043B\\u044B 970 \\u043A\\u043E\\u043F\\u0438\\u044F 3"
                    fill="none"
                    id="\\u041F\\u0440\\u044F\\u043C\\u043E\\u0443\\u0433\\u043E\\u043B\\u044C\\u043D\\u0438\\u043A_\\u0441\\u043A\\u0440\\u0443\\u0433\\u043B._\\u0443\\u0433\\u043B\\u044B_970_\\u043A\\u043E\\u043F\\u0438\\u044F_3"
                    stroke="#dbdee5"
                    stroke-linecap="round"
                    stroke-width="2"
                  />
                  <g
                    data-name="\\u041F\\u0440\\u044F\\u043C\\u043E\\u0443\\u0433\\u043E\\u043B\\u044C\\u043D\\u0438\\u043A 1 \\u043A\\u043E\\u043F\\u0438\\u044F 6"
                    fill="none"
                    id="\\u041F\\u0440\\u044F\\u043C\\u043E\\u0443\\u0433\\u043E\\u043B\\u044C\\u043D\\u0438\\u043A_1_\\u043A\\u043E\\u043F\\u0438\\u044F_6"
                    stroke="none"
                  >
                    <path
                      d="M712 322v-4h4v4zm-8 0v-4h4v4zm-48 0v-4h4v4zm-8 0v-4h4v4zm60-4v-4h4v4zm-56 0v-4h4v4zm60-4v-4h4v4zm-8 0v-4h4v4zm-48 0v-4h4v4zm-8 0v-4h4v4z"
                    />
                    <path
                      d="M716 322h-4v-4h4v4zm-8 0h-4v-4h4v4zm-48 0h-4v-4h4v4zm-8 0h-4v-4h4v4zm60-4h-4v-4h4v4zm-56 0h-4v-4h4v4zm60-4h-4v-4h4v4zm-8 0h-4v-4h4v4zm-48 0h-4v-4h4v4zm-8 0h-4v-4h4v4z"
                      fill="#212225"
                    />
                  </g>
                  <path
                    d="M671 341h24"
                    data-name="\\u0424\\u0438\\u0433\\u0443\\u0440\\u0430 1"
                    fill="none"
                    id="\\u0424\\u0438\\u0433\\u0443\\u0440\\u0430_1"
                    stroke="#212225"
                    stroke-width="2"
                  />
                  <path
                    d="M613.617 357H646.5a8.5 8.5 0 0 1 0 17h-53a8.5 8.5 0 0 1 0-17h2.587"
                    data-name="\\u041F\\u0440\\u044F\\u043C\\u043E\\u0443\\u0433\\u043E\\u043B\\u044C\\u043D\\u0438\\u043A, \\u0441\\u043A\\u0440\\u0443\\u0433\\u043B. \\u0443\\u0433\\u043B\\u044B 971"
                    fill="none"
                    id="\\u041F\\u0440\\u044F\\u043C\\u043E\\u0443\\u0433\\u043E\\u043B\\u044C\\u043D\\u0438\\u043A_\\u0441\\u043A\\u0440\\u0443\\u0433\\u043B._\\u0443\\u0433\\u043B\\u044B_971"
                    stroke="#212225"
                    stroke-width="2"
                  />
                </g>
              </svg>
            </div>
            <div
              class="mt-8"
              data-testid="ApplicationError__text"
            >
              <h2
                class="text-2xl font-bold capitalize"
              >
                Something went wrong
              </h2>
              <p
                class="text-theme-secondary-text"
              >
                It looks like something went wrong. Try visiting another page or reloading.
              </p>
            </div>
            <div
              class="mx-auto mt-8 flex max-w-md items-center justify-center space-x-4"
            >
              <button
                class="px-5 py-3 space-x-3 text-base relative items-center inline-flex justify-center font-semibold leading-tight text-center transition-colors-shadow duration-100 ease-linear outline-none focus:outline-none focus:ring-2 focus:ring-theme-primary-400 disabled:cursor-not-allowed rounded text-white bg-theme-primary-600 hover:bg-theme-primary-700"
                data-testid="ApplicationError__button--reload"
                type="button"
              >
                <div
                  class="flex items-center space-x-2"
                >
                  Reload
                </div>
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
  </main>
</DocumentFragment>
`;
